# cv_lab1

lab1/: CMakeLists.txt
lab1/apps/: CMakeLists.txt
lab1/apps/lab1/: CMakeLists.txt  main.cpp
lab1/apps/lab2/: CMakeLists.txt  main.cpp
lab1/apps/lab3/: CMakeLists.txt  main.cpp
lab1/apps/lab4/: CMakeLists.txt  main.cpp
lab1/apps/lab5/: CMakeLists.txt  main.cpp
lab1/fundamental_matrix/: CMakeLists.txt
lab1/fundamental_matrix/include/: FundamentalMatrix.hpp
lab1/fundamental_matrix/src/: FundamentalMatrix.cpp
lab1/include/: ImageShift.hpp
lab1/rect/: CMakeLists.txt
lab1/rect/include/: Rectification.hpp
lab1/rect/src/: Rectification.cpp
lab1/shifts/: CMakeLists.txt
lab1/shifts/include/: Common.hpp  ImageShift.hpp
lab1/shifts/src/: ImageShift.cpp
lab1/src/: ImageShift.cpp  main.cpp
